--- a/src/app/pages/retro-categorize/retro-categorize.component.html
+++ b/src/app/pages/retro-categorize/retro-categorize.component.html
@@ -74,7 +74,7 @@
           </div>
           <div class="modal-footer d-flex align-items-center">
             <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-              data-dismiss="modal">{{ 'retro_categorize.give_up' | translate }}
+              data-dismiss="modal">{{ 'common.cancel' | translate }}
             </button>
             <button type="button" (click)="saveCategorized()" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
               {{ 'retro_categorize.create' | translate }}
