--- a/src/app/pages/retro-comment/retro-comment.component.html
+++ b/src/app/pages/retro-comment/retro-comment.component.html
@@ -64,7 +64,7 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
               data-dismiss="modal">
-              {{ 'retro_comment.give_up' | translate }}
+              {{ 'common.cancel' | translate }}
             </button>
   
             <button type="button" (click)="sendComment()"
