--- a/src/app/pages/retro-template/retro-template.component.html
+++ b/src/app/pages/retro-template/retro-template.component.html
@@ -109,10 +109,10 @@
           <div class="modal-footer d-flex align-items-center">
             <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
               data-dismiss="modal">
-              {{ 'retro_template.give_up' | translate }}
+              {{ 'common.cancel' | translate }}
             </button>
             <button type="submit" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-              {{ 'retro_template.save' | translate }}
+              {{ 'common.save' | translate }}
             </button>
           </div>
         </div>
