--- a/src/app/workshop/login/login.component.html
+++ b/src/app/workshop/login/login.component.html
@@ -73,7 +73,7 @@
     </div>
 
     <p class="text-center text-danger" *ngIf="errorMessage">
-      {{errorMessage}}
+      {{ 'login.login_failed' | translate }}
     </p>
   </form>
 </div>
