--- a/src/app/workshop/admin/admin.component.html
+++ b/src/app/workshop/admin/admin.component.html
@@ -67,7 +67,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle"> {{ isUpdate ? " Admin Güncelle" : "Admin Ekle" }}</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle"> {{ getTitle()  }}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -81,7 +81,7 @@
                 <label>{{ 'admin.company' | translate }}</label>
 
                 <select class="form-control" [(ngModel)]="user.companyId" [ngModelOptions]="{ standalone: true }">
-                  <option value=''> Şirket Seçiniz </option>
+                  <option value=''> {{'user_management.select_company' | translate}} </option>
 
                   <option *ngFor="let company of companys" [value]=company.id> {{company.companyName}} </option>
 
@@ -94,7 +94,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Kullanıcı Adı</label>
+                <label>{{'user_management.username' | translate}}</label>
                 <input style="max-height: max-content" rows="10" class="form-control textarea"
                   [(ngModel)]="user.userName" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -104,7 +104,9 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label></label>
+                <label>
+                  {{'admin.password' | translate}}
+                </label>
                 <input type="text" style="max-height: max-content" rows="10" class="form-control"
                   [(ngModel)]="user.rawPassword" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -114,7 +116,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Email</label>
+                <label>{{'admin.email' | translate}}</label>
                 <input type="text" style="max-height: max-content" rows="10" class="form-control"
                   [(ngModel)]="user.email" [ngModelOptions]="{ standalone: true }" />
               </div>
@@ -125,7 +127,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>Statü</label>
+                <label>{{'user_management.status' | translate}}</label>
 
                 <select class="form-control" disabled [(ngModel)]="user.statu" [ngModelOptions]="{ standalone: true }">
 
@@ -143,10 +145,10 @@
 
         <div class="modal-footer d-flex align-items-center">
           <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-            data-dismiss="modal">{{ 'admin.give_up' | translate }}
+            data-dismiss="modal">    {{ 'common.cancel' | translate }}
           </button>
           <button type="button" (click)="saveUser()" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-            Kaydet
+            {{ 'common.save' | translate }}
           </button>
         </div>
       </div>
@@ -163,7 +165,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle"> Şifre Güncelle</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">{{ 'admin.password' | translate }}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -197,11 +199,11 @@
 
         <div class="modal-footer d-flex align-items-center">
           <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-            data-dismiss="modal">{{ 'admin.give_up' | translate }}
+            data-dismiss="modal">    {{ 'common.cancel' | translate }}
           </button>
           <button (click)="changePassword()" type="button"
             class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-            {{ 'admin.save' | translate }}
+            {{ 'common.save' | translate }}
           </button>
 
         </div>
