--- a/src/app/workshop/subject/subject-list/subject-list.component.html
+++ b/src/app/workshop/subject/subject-list/subject-list.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-end mb-3 mt-3">
   <button class="btn btn-theme" *ngIf="!isUser" type="button" data-toggle="modal" data-target="#addModal">
-    <span>Konu Ekle</span>
+    <span>{{'subject.add_subject' | translate}}</span>
 
   </button>
 </div>
@@ -45,7 +45,7 @@
 
           </div>
           <div class="form-group">
-            <label>Başlık</label>
+            <label>{{ 'common.title' | translate }}</label>
             <input style="max-height: max-content" rows="10" class="form-control textarea"
               [(ngModel)]="subject.subjectTitle" [ngModelOptions]="{ standalone: true }" />
           </div>
@@ -61,7 +61,7 @@
             data-dismiss="modal">Vazgeç
           </button>
           <button type="submit" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-            Kaydet
+            {{ 'common.save' | translate}}
           </button>
         </div>
       </div>
