--- a/src/app/workshop/subject/subject.component.html
+++ b/src/app/workshop/subject/subject.component.html
@@ -56,7 +56,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle"> {{ isUpdate ? "Konu Güncelle" : "Konu Ekle" }} </h5>
+          <h5 class="modal-title" id="exampleModalLongTitle"> {{getTitle()}} </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -64,7 +64,7 @@
         <div class="modal-body">
 
           <div class="form-group">
-            <label>Şirket</label>
+            <label>{{ 'common.company' | translate }}</label>
             <select class="form-control" disabled [(ngModel)]="subject.companyId"
               [ngModelOptions]="{ standalone: true }">
               <option value="" selected>{{ 'subject.select_company' | translate }}</option>
@@ -87,10 +87,10 @@
         </div>
         <div class="modal-footer d-flex align-items-center">
           <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-            data-dismiss="modal">{{ 'subject.give_up' | translate }}
+            data-dismiss="modal">    {{ 'common.cancel' | translate }}
           </button>
           <button type="submit" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-            {{ 'subject.save' | translate }}
+            {{ 'common.save' | translate }}
           </button>
         </div>
       </div>
