--- a/src/app/workshop/user-management/user-management.component.html
+++ b/src/app/workshop/user-management/user-management.component.html
@@ -73,7 +73,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle"> {{ isUpdate ? "Kullanıcı Güncelle" : "Kullanıcı Ekle" }}
+          <h5 class="modal-title" id="exampleModalLongTitle">   {{ getTitle() }}
           </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -117,10 +117,10 @@
         </div>
         <div class="modal-footer d-flex align-items-center">
           <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
-            data-dismiss="modal">{{ 'user_management.give_up' | translate }}
+            data-dismiss="modal">    {{ 'common.cancel' | translate }}
           </button>
           <button type="submit" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
-            {{ 'user_management.save' | translate }}
+          {{ 'common.save' | translate }}
           </button>
         </div>
       </div>
