--- a/src/app/workshop/admin/admin.component.html
+++ b/src/app/workshop/admin/admin.component.html
@@ -188,7 +188,7 @@
           <div class="row">
             <div class="col-12">
               <div class="form-group">
-                <label>{{ 'admin.password_repeat' | translate }}</label>
+                <label>{{ 'admin.password_again' | translate }}</label>
                 <input type="text" style="max-height: max-content" rows="10" class="form-control"
                   [(ngModel)]="resetPassword.confirmPassword" [ngModelOptions]="{ standalone: true }" />
               </div>
