--- a/src/app/pages/retro-start/retro-start.component.html
+++ b/src/app/pages/retro-start/retro-start.component.html
@@ -12,12 +12,12 @@
         [ngModelOptions]="{ standalone: true }" />
     </div>
     <div class="form-group ">
-      <label>{{ 'retro_start.Number_of_Comments' | translate }}</label>
+      <label>{{ 'retro_start.number_of_Comments' | translate }}</label>
       <input type="number" [disabled]="isCheckFailed()" class="form-control" [(ngModel)]="config.commentRight"
         [ngModelOptions]="{ standalone: true }" />
     </div>
     <div class="form-group ">
-      <label>{{ 'retro_start.Number_of_Voting_Rights' | translate }}</label>
+      <label>{{ 'retro_start.number_of_Voting_Rights' | translate }}</label>
       <input type="number" [disabled]="isCheckFailed()" class="form-control" [(ngModel)]="config.voteRight"
         [ngModelOptions]="{ standalone: true }" />
     </div>
